- Check in autoconf for MacOS X that will make compiling and running on it 
  to work
- Possibly fixed a compile problem on Solaris/SunOS (#0000984) reported by Dom
- Added deny channel::redirect, which allows you to forward a client to another channel
  if the one he/she joined is not allowed. can also be used for channel "aliases" like
  #operhelp sends people to #help
- Made it so Unreal always uses extended regex support
- Fixed the compile problem on Solaris/SunOS (#0000984) reported by Dom
- Updated src/win32/unrealinst.iss a bit
- Changed /who flag '&' to '?'
- Fixed regex detection problem (introduced by a change 2 days ago).
- Added set::options::mkpasswd-for-everyone to let normal users use /mkpasswd, requested
  by Evats.
- Added error messages if not oper for: sdesc, mkpasswd, htm, rping, opermotd (#0000988).
- Removed the old TSP stuff from the extras directory, this is no longer used and it just
  wastes space.
- Made /whois work slightly faster
- Probably fixed server-notices bug (duplicates, to non-opers) caused by a few SVS* cmds,
  reported by _loco_ (#0000991).
- Fixed a bug in the win32 editor reported by ChAoS^TiGeR
- Fixed /map bug that permitted trivial finding of U-lined servers
- Fixed bug in HOOKTYPE_LOCAL_JOIN which could cause 0-member-channels if a hook returned
  1 and the channel was new.
- Made it so a permanent /kline no longer says "Permanent Timed K:line" which can be confusing
  (#0000997) reported by AngryWolf
- Module coders: new hooks: part, kick, chanmode, topic. changed: quit (added 'comment' param).
- Enlarged REPORT_* vars a bit.
- IPv6: UnrealIRCd can now lookup ip6.arpa addresses too (original IRCnet patch modified for
  UnrealIRCd by Onliner).
- Doc updates
- Removed "Duplicate user entry in SJOIN" notice because the problem has been traced down.
- Fixed some ./Config problems on Solaris with IPv6, SSL, and some other misc. things 
  (#0001004) reported by lion.
- Changed the /whois "secret channel" flag from '~' to '?'